--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,8 @@
-<img src="../static/logo.png">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+<a href="/">
+<img src="../static/images/logo.png" alt="Paras työpaikka">
+</a>
+
 <title>Etusivu</title>
 <h1>Etusivu</h1>
 <b>Tervetuloa</b> <i>sovellukseen</i>!
