--- a/templates/new.html
+++ b/templates/new.html
@@ -1,6 +1,13 @@
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+<a href="/">
+<img src="../static/images/logo.png" alt="Paras työpaikka">
+</a>
+
 <form action="/send" method="POST">
 Viesti: <br>
 <textarea name="content" rows="3" cols="40"></textarea>
 <br>
 <input type="submit" value="Lähetä">
 </form>
+
+<a href="/">Etusivulle</a>
