--- a/templates/new.html
+++ b/templates/new.html
@@ -5,9 +5,9 @@
 
 <form action="/send" method="POST">
 Viesti: <br>
-<textarea name="content" rows="3" cols="40"></textarea>
+<textarea name="tavara" rows="3" cols="40"></textarea>
 <br>
-<input type="submit" value="Lähetä">
+<input type="submit" value="Lisää varastoon tuote">
 </form>
 
 <a href="/">Etusivulle</a>
