Lisattiin tilaus ominaisuus

--- a/templates/new.html
+++ b/templates/new.html
@@ -4,10 +4,12 @@
 </a>
 
 <form action="/send" method="POST">
-Viesti: <br>
+Tuote: <br>
 <textarea name="tavara" rows="3" cols="40"></textarea>
 <br>
 <input type="submit" value="Lisää varastoon tuote">
 </form>
 
+<a href="/varasto">Takaisin</a>
+<p> - </p>
 <a href="/">Etusivulle</a>
