lisattiin pieni teksti

--- a/templates/taydennys.html
+++ b/templates/taydennys.html
@@ -3,6 +3,7 @@
 <img src="../static/images/logo.png" alt="Paras työpaikka">
 </a>
 
+<p> Täällä voit tilata lisää tuotetta varastoon</p>
 <p> Valitse tuote: </p>
 
 {% for tavara in tavara %}
