lisattiin paljon ominaisuuksia

--- a/templates/new.html
+++ b/templates/new.html
@@ -5,7 +5,7 @@
 
 <form action="/send" method="POST">
 Tuote: <br>
-<textarea name="tavara" rows="3" cols="40"></textarea>
+<textarea name="item" rows="3" cols="40"></textarea>
 <br>
 <input type="submit" value="Lisää varastoon tuote">
 </form>
