--- a/templates/roskiin.html
+++ b/templates/roskiin.html
@@ -3,20 +3,16 @@
 <img src="../static/images/logo.png" alt="Paras työpaikka">
 </a>
 
-<p> Täällä voit tilata lisää tuotetta varastoon</p>
+<p> Poista tuote varastosta. Tuote ja sen tilaukset katoavat järjestelmästä. </p>
 <p> Valitse tuote: </p>
 
 {% for item in item %}
-<form action="/tilaus" method="POST">
+<form action="/poista" method="POST">
 Tuote: {{ item[1] }}
 <p></p>
 Varastossa: {{ item[2] }}kpl<br>
-Tilauksia: {{ item[3] - 1 }}, tilattu yhteensä {{ item[4] }}kpl<br>
-<p></p>
-<label for="quantity">Tilauksen maara (1 - 9999):</label>
-<input type="number" id="quantity" name="quantity" min="1" max="9999">
 <input type="hidden" id="itemid" name="itemid" value={{ item[0] }}>
-<input type="submit" value="Tilaa täydennys">
+<input type="submit" value="Poista">
 </form>
 <hr>
 {% endfor %}
